Доработка рейтинга игроков